# whatsapp-rust-node

./: .gitignore  AGENTS.md  Cargo.toml  README.md  bot.ts  index.d.ts  index.js  main.ts  package.json  tsconfig.json
examples/: basic.ts
src/: lib.rs
