
[package]
name = "whatsapp-rust-node"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", default-features = false, features = [
  "napi4",
  "async",
  "serde-json",
] }
napi-derive = "3"

serde_json = "1.0"

tokio = { version = "1", features = ["full"] }
waproto = { git = "https://github.com/jlucaso1/whatsapp-rust" }

whatsapp-rust = { git = "https://github.com/jlucaso1/whatsapp-rust" }

[build-dependencies]
napi-build = "1"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
strip = true
codegen-units = 1
