
[package]
name = "whatsapp-rust-node"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi4", "async", "serde-json"] }
napi-derive = "3"

# Update path and add `serde` feature
whatsapp-rust = { git = "https://github.com/jlucaso1/whatsapp-rust", branch = "copilot/abstract-transport-layer-runtime" }
# The transport is now required by the builder
# whatsapp-rust-tokio-transport = { git = "https://github.com/jlucaso1/whatsapp-rust" }
bytes = "1.5"

tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
async-trait = "0.1"
anyhow = "1.0"
waproto = { git = "https://github.com/jlucaso1/whatsapp-rust", branch = "copilot/abstract-transport-layer-runtime" }

[build-dependencies]
napi-build = "1"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
strip = true
codegen-units = 1
