
[package]
name = "whatsapp-rust-node"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.5"
getrandom = { version = "0.3", features = ["wasm_js"] }
napi = { version = "3", default-features = false, features = [
  "napi4",
  "async",
  "serde-json",
] }
napi-derive = "3"
serde_json = "1.0"

tokio = { version = "1", default-features = false }
uuid = { version = "1.18.1", default-features = false, features = ["v4", "js"] }
waproto = { git = "https://github.com/jlucaso1/whatsapp-rust" }

whatsapp-rust = { git = "https://github.com/jlucaso1/whatsapp-rust", default-features = false, features = [
  "sqlite-storage",
  "ureq-client",
] }

[build-dependencies]
napi-build = "2.2.3"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
strip = true
codegen-units = 1
